--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         <div id="results"></div>
     </div>
     <script src="script.js"></script>
+    <footer>
+        <h1>CRÉDITOS A EQUIPE DE VITOR, LEONARDO M, MATHEUS, FILIPE ZELLA E JULIA S</h1>
+    </footer>
 </body>
 </html>
